--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="Author" content="obake.work">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name=”keywords” content=”アプリ,おばけ,ひとだま”>
     <meta name=”description” content=”Obake.work。なんらかのアプリケーションを提示します。”>
