--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Author" content="obake.work">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name=”keywords” content=”アプリ,おばけ,ひとだま”>
-    <meta name=”description” content=”Obake.work。なんらかのアプリケーションを提示します。”>
-    <title>About</title>
+    <meta name="keywords" content="アプリ,おばけ,ひとだま">
+    <meta name="description" content="Obake.work。なんらかのアプリケーションを提示します。">
+    <title>しみずのポートフォリオ</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
